<resources>
    <string name="app_name">Weight Manager</string>
    <string name="title_activity_view_summary">ViewSummary</string>
    <string name="Good"><b>Good!</b></string>
    <string name="BeCareful"><b>Be careful</b></string>
    <string name="Risk"><b>Risk</b></string>
    <string name="title_activity_set_graph_limits">SetGraphLimits</string>

    <string-array name="activity_level">
        <item>Sedentary</item>
        <item>Light (1–3 days)</item>
        <item>Moderate (3–5 days)</item>
        <item>Very active (6–7 days)</item>
    </string-array>

    <string-array name="weight_unit">
        <item>Kg</item>
        <item>Lbs</item>
    </string-array>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_pene">pene</string>

</resources>
